tests/snapshots/scenarios_test__test_send_receive_once_client_tcp-tls_102400.snap
---
source: tests/scenarios_test.rs
description: "Ntp server not provided\nLoading certificates from configuration directory\nStarting clipboard to protocol forwarder protocol_types=[TcpTls] groups=[\"default\"]\nWaiting to send clipboard once\nCreate filesystem reader {\"/dev/stdin\": {\"default\"}}\nSend clipboard on startup path=/dev/stdin\nWatching for filesystem changes path=/dev/stdin\nStarting filesystem reader\nStarting writer protocol=tcp-tls\nConnect local_addr=127.0.0.1:12904 remote_addr=127.0.0.1:12903 server_name=localhost\nNo cached session for DnsName(\"localhost\")\nNot resuming any session\nUsing ciphersuite TLS13_AES_256_GCM_SHA384\nNot resuming\nTLS1.3 encrypted extensions: [ServerNameAck]\nALPN protocol is None\nGot CertificateRequest CertificateRequestPayloadTls13 { context: , extensions: [SignatureAlgorithms([ECDSA_NISTP384_SHA384, ECDSA_NISTP256_SHA256, ED25519, RSA_PSS_SHA512, RSA_PSS_SHA384, RSA_PSS_SHA256, RSA_PKCS1_SHA512, RSA_PKCS1_SHA384, RSA_PKCS1_SHA256]), AuthorityNames([DistinguishedName(3022310b30090603550406130247423113301106035504030c0a74657374636c69656e74), DistinguishedName(3045310b30090603550406130241553113301106035504080c0a536f6d652d53746174653121301f060355040a0c18496e7465726e6574205769646769747320507479204c7464)])] }\nAttempting client auth\nTcp send stream stream_size=102444 remote_addr=127.0.0.1:12903\nMessage sent data_size=102400 network_size=102452 message_type=file\nSent bytes 102400\nFile reader cancelled\nNo more messages for writer\nFinished file reader processed messages 1\nFinished clipboard to protocol forwarder processed messages 1\nSending warning alert CloseNotify\nFinished tcptls writer processed messages 1\n"
info:
  program: clipboard-sync
  args:
    - "--verbosity"
    - debug=simple
    - "--key"
    - "12345678912345678912345678912345"
    - "--send-using-address"
    - "127.0.0.1:12904,[::1]:12904"
    - "--send-once"
    - "--clipboard"
    - /dev/stdin
    - "--allowed-host"
    - "127.0.0.1:12903=localhost"
    - "--protocol"
    - tcp-tls
    - "--remote-certificates"
    - tests/certs/cert-verify/for-client
    - "--private-key"
    - tests/certs/testclient.key
    - "--certificate-chain"
    - tests/certs/testclient.crt
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
ALPN protocol is None
Attempting client auth
Connect local_addr=127.0.0.1:12904 remote_addr=127.0.0.1:12903 server_name=localhost
Create filesystem reader {"/dev/stdin": {"default"}}
File reader cancelled
Finished clipboard to protocol forwarder processed messages 1
Finished file reader processed messages 1
Finished tcptls writer processed messages 1
Loading certificates from configuration directory
Message sent data_size=102400 network_size=102452 message_type=file
No cached session for DnsName("localhost")
No more messages for writer
Not resuming
Not resuming any session
Ntp server not provided
Send clipboard on startup path=/dev/stdin
Sending warning alert CloseNotify
Sent bytes 102400
Starting clipboard to protocol forwarder protocol_types=[TcpTls] groups=["default"]
Starting filesystem reader
Starting writer protocol=tcp-tls
Tcp send stream stream_size=102444 remote_addr=127.0.0.1:12903
Using ciphersuite TLS13_AES_256_GCM_SHA384
Waiting to send clipboard once
Watching for filesystem changes path=/dev/stdin
